2008-10-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs: Changed inner type namespaces.

2008-10-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: exposed
	GetAssemblyInfo method.

2008-10-08  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomReturnType.cs: domreturntype now throws
	  null argument exception on null types. 

2008-10-07  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/DotNetProject.cs: Fix copying app.config.

2008-10-07  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/Project.cs: Don't try to copy a file to itself.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomType.cs: fixed possible nullreference.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs,
	  MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Ensured that sourceprojectdom is set.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomType.cs: Instantiated generic types now
	  preserve generic parameters.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomCecilType.cs: fixed 'Bug 431761 - Code
	  completion is incorrect'.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/ExpressionContext.cs: worked on expression
	  context filter.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs: fixed 'Bug
	  432856 - Creation and editing broken for unsaved files'.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/ResolveResult.cs: fixed bug in base result.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/ResolveResult.cs: fixed a possible resolve
	  null reference.

2008-10-06  Mike Krüger <mkrueger@novell.com> 
