@@ -1,5 +1,9 @@
 2008-10-08  Mike Krüger  <mkrueger@novell.com>
 
+	* MonoDevelop.Projects.Dom/DomType.cs: fixed regression bug.
+
+2008-10-08  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.Projects.Dom/DomType.cs: Changed inner type namespaces.
 
 2008-10-08  Mike Krüger  <mkrueger@novell.com>
